# IUM-long-stay-insights

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
data/processed/: listings_statistics.csv  merged_reviews_statistics.csv.zst
data/raw/v1/: listings.csv.zst  users.csv.zst
docs/: Makefile  conf.py  index.rst  make.bat
microservice/: README.md  config.py  main.py  models.py  prediction.py  utils.py
microservice/trained_models/torch/: NaiveClassifier.pth
microservice/trained_models/xgboost/: xgboost_classifier.joblib
models/: OHE_CLASSIFIER.pth
notebooks/: amenities_processing.ipynb  classifiers_experiments.ipynb  data_v1_eda.ipynb  data_v1_preprocessing.ipynb  data_v2_eda.ipynb  models.ipynb  sentiment_analysis.ipynb
reports/pdf_md/: Etap 1 - zarys projektu.md
src/data/: data_loader.py  utils.py
src/models/: classifier.py  classifier_emb.py  naive_classifier.py  train_model.py
src/visualization/: visualize.py
