[tool.poetry]
name = "ium-long-stay-insights"
version = "0.1.0"
description = "The goal of this project is to understand the key factors influencing customers of the Nocarz booking platform when they choose to book longer stays."
authors = ["Bartosz Psik, Maksymilian Baj"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src", from = "." }]


[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
torch = "^2.6.0"
ruff = "^0.11.5"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
